apps/saleor-api/overlays/stage/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saleor-api
  namespace: kyeol
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: api
